  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? richardjgowers, IAlibay, hmacdope

  * 2.0.0

Fixes
  * TOPParser no longer guesses elements when missing atomic number records
    (Issues #2449, #2651)

Enhancements
  * Added computation of Mean Squared Displacements (#2438, PR #2619)

Changes
  * Removes support for passing `atoms` to XYZWriter. (Issue #2739, PR #2754)
  * Removes; deprecated support for using Writer.write(Timestep), deprecated
    Writer.write_next_timestep, use write() instead. (Issue #2739)
  * Removes deprecated density_from_Universe, density_from_PDB, Bfactor2RMSF,
    and notwithin_coordinates_factory from MDAnalysis.analysis.density
    (Issue #2739)
  * Removes deprecated ProgressMeter (Issue #2739)
  * Removes deprecated MDAnalysis.units.N_Avogadro (PR #2737)
  * Dropped Python 2 support

Deprecations


06/09/20 richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
         PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
         Yuan-Yu, xiki-tempula, HTian1997, Iv-Hristov, hmacdope, AnshulAngaria,
         ss62171, Luthaf, yuxuanzhuang, abhishandy, mlnance, shfrz, orbeckst,
         wvandertoorn, cbouy, AmeyaHarmalkar, Oscuro-Phoenix, andrrizzi, WG150,
         tylerjereddy, Marcello-Sega

  * 1.0.0

Fixes
  * MOL2Writer now accepts both Universes and AtomgGroups (Issue #2717)
  * Use user-provided `remark` in `XYZWriter` (Issue #2692)
  * Added more informative error messages about topology attributes
    (Issue #2565)
  * Made NoDataError a subclass of ValueError *and* AttributeError
    (Issue #2635)
  * Fixed select_atoms("around 0.0 ...") selections and capped_distance 